{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 90,
  "lineage": "b7065b49-6c39-94d9-287e-0e91e0d0c129",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03d1820163e6b9f5d",
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:instance/i-05c39bef99a6f21da",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "lab-1c-ec2-secrets-profile",
            "id": "i-05c39bef99a6f21da",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-067614937a9a80bcf"
              }
            ],
            "primary_network_interface_id": "eni-067614937a9a80bcf",
            "private_dns": "ip-10-30-11-129.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.11.129",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ae3849ffe75a337d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0906b9475428cb098",
            "tags": {
              "Name": "lab-1c-ec2-app"
            },
            "tags_all": {
              "Name": "lab-1c-ec2-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-001273f2057de0cef"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "i-05c39bef99a6f21da",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_profile",
            "module.iam.aws_iam_role.ec2_secrets_role",
            "module.security.aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ingress",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "lab-1c-alb-logs-261519058382",
                "enabled": true,
                "prefix": "alb-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:261519058382:loadbalancer/app/lab-1c-alb/fd1a7f35af65fc49",
            "arn_suffix": "app/lab-1c-alb/fd1a7f35af65fc49",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lab-1c-alb-836917220.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:261519058382:loadbalancer/app/lab-1c-alb/fd1a7f35af65fc49",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lab-1c-alb",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-0a6aa66545d57f029"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01fc685601308ef77"
              },
              {
                "subnet_id": "subnet-0313550af428d383e"
              }
            ],
            "subnets": [
              "subnet-01fc685601308ef77",
              "subnet-0313550af428d383e"
            ],
            "tags": {
              "Name": "lab-1c-alb"
            },
            "tags_all": {
              "Name": "lab-1c-alb"
            },
            "vpc_id": "vpc-064cabda2b5515c75",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:261519058382:loadbalancer/app/lab-1c-alb/fd1a7f35af65fc49"
          },
          "dependencies": [
            "module.ingress.aws_s3_bucket.alb_logs",
            "module.ingress.data.aws_caller_identity.current",
            "module.security.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ingress",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:261519058382:listener/app/lab-1c-alb/fd1a7f35af65fc49/c97b0b61334ee95f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:261519058382:listener/app/lab-1c-alb/fd1a7f35af65fc49/c97b0b61334ee95f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:261519058382:loadbalancer/app/lab-1c-alb/fd1a7f35af65fc49",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:261519058382:listener/app/lab-1c-alb/fd1a7f35af65fc49/c97b0b61334ee95f"
          },
          "dependencies": [
            "module.ingress.aws_lb.app_alb",
            "module.ingress.aws_s3_bucket.alb_logs",
            "module.ingress.data.aws_caller_identity.current",
            "module.security.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ingress",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:261519058382:listener/app/lab-1c-alb/fd1a7f35af65fc49/65a0948618fb004a",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:261519058382:certificate/9277c75d-1ac0-45cf-b436-12a8368d2a21",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:261519058382:targetgroup/lab-1c-tg/78cef9676ee8f21c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:261519058382:listener/app/lab-1c-alb/fd1a7f35af65fc49/65a0948618fb004a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:261519058382:loadbalancer/app/lab-1c-alb/fd1a7f35af65fc49",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:261519058382:listener/app/lab-1c-alb/fd1a7f35af65fc49/65a0948618fb004a"
          },
          "dependencies": [
            "module.ingress.aws_acm_certificate.app_cert",
            "module.ingress.aws_lb.app_alb",
            "module.ingress.aws_lb_target_group.app_tg",
            "module.ingress.aws_s3_bucket.alb_logs",
            "module.ingress.data.aws_caller_identity.current",
            "module.security.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ingress",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:261519058382:targetgroup/lab-1c-tg/78cef9676ee8f21c",
            "arn_suffix": "targetgroup/lab-1c-tg/78cef9676ee8f21c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:261519058382:targetgroup/lab-1c-tg/78cef9676ee8f21c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:261519058382:loadbalancer/app/lab-1c-alb/fd1a7f35af65fc49"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lab-1c-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab-1c-tg"
            },
            "tags_all": {
              "Name": "lab-1c-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-064cabda2b5515c75"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:261519058382:targetgroup/lab-1c-tg/78cef9676ee8f21c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ingress",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:261519058382:targetgroup/lab-1c-tg/78cef9676ee8f21c-2026020518581087790000000f",
            "port": 80,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:261519058382:targetgroup/lab-1c-tg/78cef9676ee8f21c",
            "target_id": "i-05c39bef99a6f21da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_instance.ec2",
            "module.iam.aws_iam_instance_profile.ec2_profile",
            "module.iam.aws_iam_role.ec2_secrets_role",
            "module.ingress.aws_lb_target_group.app_tg",
            "module.security.aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:security-group/sg-0a6aa66545d57f029",
            "description": "Public ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALB egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6aa66545d57f029",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "lab-1c-alb-sg",
            "name_prefix": "",
            "owner_id": "261519058382",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab-1c-alb-sg"
            },
            "tags_all": {
              "Name": "lab-1c-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-064cabda2b5515c75"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "sg-0a6aa66545d57f029",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:security-group/sg-001273f2057de0cef",
            "description": "Security group for EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001273f2057de0cef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach EC2 app port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a6aa66545d57f029"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-lab-1c",
            "name_prefix": "",
            "owner_id": "261519058382",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-ec2-lab-1c"
            },
            "tags_all": {
              "Name": "sg-ec2-lab-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-064cabda2b5515c75"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "sg-001273f2057de0cef",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_rotation_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:security-group/sg-08e4c36cd5014d31d",
            "description": "Security group for Secrets Manager rotation Lambda",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow rotation Lambda to call AWS APIs over HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow rotation Lambda to reach RDS on DB port",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bddb41ba43237d7b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-08e4c36cd5014d31d",
            "ingress": [],
            "name": "lambda-rotation-lab-1c",
            "name_prefix": "",
            "owner_id": "261519058382",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab-1c-lambda-rotation-sg"
            },
            "tags_all": {
              "Name": "lab-1c-lambda-rotation-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-064cabda2b5515c75"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "sg-08e4c36cd5014d31d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:security-group/sg-0bddb41ba43237d7b",
            "description": "Allow inbound traffic and all outbound traffic to the rds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bddb41ba43237d7b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL from Lambda rotation",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08e4c36cd5014d31d"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "MySQL access from EC2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-001273f2057de0cef"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-lab-1c",
            "name_prefix": "",
            "owner_id": "261519058382",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab-1c-rds-sg"
            },
            "tags_all": {
              "Name": "lab-1c-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-064cabda2b5515c75"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "sg-0bddb41ba43237d7b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce_endpoints_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:security-group/sg-0836786897eb89386",
            "description": "Allow HTTPS from EC2 SG to VPC interface endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0836786897eb89386",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTPS from EC2 SG",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-001273f2057de0cef"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpce-interface-endpoints-lab-1c",
            "name_prefix": "",
            "owner_id": "261519058382",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpce-interface-endpoints-lab-1c"
            },
            "tags_all": {
              "Name": "vpce-interface-endpoints-lab-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-064cabda2b5515c75"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "sg-0836786897eb89386",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ALB to reach EC2 app port",
            "from_port": 80,
            "id": "sgrule-2378375295",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-northeast-1",
            "security_group_id": "sg-001273f2057de0cef",
            "security_group_rule_id": "sgr-0ac6bcf3cb99f7993",
            "self": false,
            "source_security_group_id": "sg-0a6aa66545d57f029",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.ec2_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:security-group-rule/sgr-02623897605dd2a68",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02623897605dd2a68",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-001273f2057de0cef",
            "security_group_rule_id": "sgr-02623897605dd2a68",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "sgr-02623897605dd2a68",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security.aws_security_group.ec2_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "lambda_https_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:security-group-rule/sgr-0529126cc1e6516b7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow rotation Lambda to call AWS APIs over HTTPS",
            "from_port": 443,
            "id": "sgr-0529126cc1e6516b7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-08e4c36cd5014d31d",
            "security_group_rule_id": "sgr-0529126cc1e6516b7",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "sgr-0529126cc1e6516b7",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security.aws_security_group.lambda_rotation_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "lambda_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:security-group-rule/sgr-0ebe154556016e0bd",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow rotation Lambda to reach RDS on DB port",
            "from_port": 3306,
            "id": "sgr-0ebe154556016e0bd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0bddb41ba43237d7b",
            "region": "ap-northeast-1",
            "security_group_id": "sg-08e4c36cd5014d31d",
            "security_group_rule_id": "sgr-0ebe154556016e0bd",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "sgr-0ebe154556016e0bd",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security.aws_security_group.lambda_rotation_sg",
            "module.security.aws_security_group.rds_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:security-group-rule/sgr-0eaee2f6449ae9324",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0eaee2f6449ae9324",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0bddb41ba43237d7b",
            "security_group_rule_id": "sgr-0eaee2f6449ae9324",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "sgr-0eaee2f6449ae9324",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security.aws_security_group.rds_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpce_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:security-group-rule/sgr-07e3799fa41940203",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "All egress",
            "from_port": null,
            "id": "sgr-07e3799fa41940203",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-0836786897eb89386",
            "security_group_rule_id": "sgr-07e3799fa41940203",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "sgr-07e3799fa41940203",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security.aws_security_group.vpce_endpoints_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:security-group-rule/sgr-0f2415d7c924ced3d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTP traffic",
            "from_port": 80,
            "id": "sgr-0f2415d7c924ced3d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-1",
            "security_group_id": "sg-001273f2057de0cef",
            "security_group_rule_id": "sgr-0f2415d7c924ced3d",
            "tags": {
              "Name": "lab-1c-http"
            },
            "tags_all": {
              "Name": "lab-1c-http"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "sgr-0f2415d7c924ced3d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security.aws_security_group.ec2_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds-http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:security-group-rule/sgr-016449b524d3a75ab",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "MySQL access from EC2",
            "from_port": 3306,
            "id": "sgr-016449b524d3a75ab",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-001273f2057de0cef",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0bddb41ba43237d7b",
            "security_group_rule_id": "sgr-016449b524d3a75ab",
            "tags": {
              "Name": "lab-1c-tcp"
            },
            "tags_all": {
              "Name": "lab-1c-tcp"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "sgr-016449b524d3a75ab",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.rds_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_from_lambda_rotation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:security-group-rule/sgr-00760ac12f26296fa",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow MySQL from Lambda rotation",
            "from_port": 3306,
            "id": "sgr-00760ac12f26296fa",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-08e4c36cd5014d31d",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0bddb41ba43237d7b",
            "security_group_rule_id": "sgr-00760ac12f26296fa",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "sgr-00760ac12f26296fa",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security.aws_security_group.lambda_rotation_sg",
            "module.security.aws_security_group.rds_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "vpce_https_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:security-group-rule/sgr-090f76d62a2b98f93",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "HTTPS from EC2 SG",
            "from_port": 443,
            "id": "sgr-090f76d62a2b98f93",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-001273f2057de0cef",
            "region": "ap-northeast-1",
            "security_group_id": "sg-0836786897eb89386",
            "security_group_rule_id": "sgr-090f76d62a2b98f93",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "sgr-090f76d62a2b98f93",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.vpce_endpoints_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-050f2663fa479ae7d",
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:elastic-ip/eipalloc-050f2663fa479ae7d",
            "association_id": "eipassoc-0b05d05713af0ba55",
            "domain": "vpc",
            "id": "eipalloc-050f2663fa479ae7d",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0d0f9d1ba6433ca9b",
            "private_dns": "ip-10-30-1-114.ap-northeast-1.compute.internal",
            "private_ip": "10.30.1.114",
            "public_dns": "ec2-54-150-19-48.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.150.19.48",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "lab-1c-nat-eip"
            },
            "tags_all": {
              "Name": "lab-1c-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:internet-gateway/igw-0dd6b6f9896cc6010",
            "id": "igw-0dd6b6f9896cc6010",
            "owner_id": "261519058382",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "lab-1c-igw"
            },
            "tags_all": {
              "Name": "lab-1c-igw"
            },
            "vpc_id": "vpc-064cabda2b5515c75"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-050f2663fa479ae7d",
            "association_id": "eipassoc-0b05d05713af0ba55",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0b6c802b1fbe6a0ad",
            "network_interface_id": "eni-0d0f9d1ba6433ca9b",
            "private_ip": "10.30.1.114",
            "public_ip": "54.150.19.48",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01fc685601308ef77",
            "tags": {
              "Name": "lab-1c-nat-gw"
            },
            "tags_all": {
              "Name": "lab-1c-nat-gw"
            },
            "vpc_id": "vpc-064cabda2b5515c75"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_default_via_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01935f687f7cddabe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b6c802b1fbe6a0ad",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-01935f687f7cddabe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-01935f687f7cddabe"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:route-table/rtb-01935f687f7cddabe",
            "id": "rtb-01935f687f7cddabe",
            "owner_id": "261519058382",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b6c802b1fbe6a0ad",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab-1c-private-rtb"
            },
            "tags_all": {
              "Name": "lab-1c-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-064cabda2b5515c75"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "rtb-01935f687f7cddabe",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:route-table/rtb-0aedbaa07fe1d91e6",
            "id": "rtb-0aedbaa07fe1d91e6",
            "owner_id": "261519058382",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd6b6f9896cc6010",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab-1c-public-rtb"
            },
            "tags_all": {
              "Name": "lab-1c-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-064cabda2b5515c75"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "rtb-0aedbaa07fe1d91e6",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d99e0e00ca9bf56",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-01935f687f7cddabe",
            "subnet_id": "subnet-0906b9475428cb098"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02049e1527000e465",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-01935f687f7cddabe",
            "subnet_id": "subnet-01878c9ae540a4c51"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd25450d450f5b07",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0aedbaa07fe1d91e6",
            "subnet_id": "subnet-01fc685601308ef77"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01dae6ca32e8b1777",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0aedbaa07fe1d91e6",
            "subnet_id": "subnet-0313550af428d383e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:subnet/subnet-0906b9475428cb098",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.30.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0906b9475428cb098",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "261519058382",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "lab-1c-private-subnet-1a"
            },
            "tags_all": {
              "Name": "lab-1c-private-subnet-1a"
            },
            "vpc_id": "vpc-064cabda2b5515c75"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "subnet-0906b9475428cb098",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:subnet/subnet-01878c9ae540a4c51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.30.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01878c9ae540a4c51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "261519058382",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "lab-1c-private-subnet-1b"
            },
            "tags_all": {
              "Name": "lab-1c-private-subnet-1b"
            },
            "vpc_id": "vpc-064cabda2b5515c75"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "subnet-01878c9ae540a4c51",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:subnet/subnet-01fc685601308ef77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fc685601308ef77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "261519058382",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "lab-1c-public-subnet-1a"
            },
            "tags_all": {
              "Name": "lab-1c-public-subnet-1a"
            },
            "vpc_id": "vpc-064cabda2b5515c75"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "subnet-01fc685601308ef77",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:subnet/subnet-0313550af428d383e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0313550af428d383e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "261519058382",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "lab-1c-public-subnet-1b"
            },
            "tags_all": {
              "Name": "lab-1c-public-subnet-1b"
            },
            "vpc_id": "vpc-064cabda2b5515c75"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "subnet-0313550af428d383e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:vpc/vpc-064cabda2b5515c75",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-0cacbc1e563c0e8b0",
            "default_route_table_id": "rtb-08cdb9682890985da",
            "default_security_group_id": "sg-0d5b22a9b53fa2aa8",
            "dhcp_options_id": "dopt-081b9eb130dc6e261",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-064cabda2b5515c75",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08cdb9682890985da",
            "owner_id": "261519058382",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "lab-1c-vpc"
            },
            "tags_all": {
              "Name": "lab-1c-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "vpc-064cabda2b5515c75",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:vpc-endpoint/vpce-0b4df6f510c8ad01f",
            "dns_entry": [
              {
                "dns_name": "vpce-0b4df6f510c8ad01f-zznr9357.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0b4df6f510c8ad01f-zznr9357-ap-northeast-1a.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0b4df6f510c8ad01f-zznr9357-ap-northeast-1c.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ec2messages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z08761653C3UCF81P82HN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b4df6f510c8ad01f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-043284fa00a39368c",
              "eni-0a509464e84050bd1"
            ],
            "owner_id": "261519058382",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0836786897eb89386"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ec2messages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.119",
                "subnet_id": "subnet-0906b9475428cb098"
              },
              {
                "ipv4": "10.30.12.207",
                "subnet_id": "subnet-01878c9ae540a4c51"
              }
            ],
            "subnet_ids": [
              "subnet-01878c9ae540a4c51",
              "subnet-0906b9475428cb098"
            ],
            "tags": {
              "Name": "vpce-ec2messages"
            },
            "tags_all": {
              "Name": "vpce-ec2messages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-064cabda2b5515c75"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "vpce-0b4df6f510c8ad01f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security.aws_security_group.vpce_endpoints_sg",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:vpc-endpoint/vpce-0bbfee5a9bd69fc5d",
            "dns_entry": [
              {
                "dns_name": "vpce-0bbfee5a9bd69fc5d-dv0uv2fo.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0bbfee5a9bd69fc5d-dv0uv2fo-ap-northeast-1c.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0bbfee5a9bd69fc5d-dv0uv2fo-ap-northeast-1a.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z001372198AXQ6JWIBCZ"
              },
              {
                "dns_name": "logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z08756962ENTIM8Q36ZKC"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z001372314MNO4KO8LHXI"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z0869408192QVJ36UVXU2"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0bbfee5a9bd69fc5d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04441dc2867c0bf15",
              "eni-0a54437fb48a4a711"
            ],
            "owner_id": "261519058382",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0836786897eb89386"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.logs",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.244",
                "subnet_id": "subnet-0906b9475428cb098"
              },
              {
                "ipv4": "10.30.12.66",
                "subnet_id": "subnet-01878c9ae540a4c51"
              }
            ],
            "subnet_ids": [
              "subnet-01878c9ae540a4c51",
              "subnet-0906b9475428cb098"
            ],
            "tags": {
              "Name": "vpce-logs"
            },
            "tags_all": {
              "Name": "vpce-logs"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-064cabda2b5515c75"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "vpce-0bbfee5a9bd69fc5d",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security.aws_security_group.vpce_endpoints_sg",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "secretsmanager",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:vpc-endpoint/vpce-06c7df5dc168152c5",
            "dns_entry": [
              {
                "dns_name": "vpce-06c7df5dc168152c5-nea91m8g.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-06c7df5dc168152c5-nea91m8g-ap-northeast-1c.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-06c7df5dc168152c5-nea91m8g-ap-northeast-1a.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "secretsmanager.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0012920238CQGV6O9D85"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06c7df5dc168152c5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-068995df30ffec8de",
              "eni-084b48129d367173b"
            ],
            "owner_id": "261519058382",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0836786897eb89386"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.secretsmanager",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.76",
                "subnet_id": "subnet-0906b9475428cb098"
              },
              {
                "ipv4": "10.30.12.78",
                "subnet_id": "subnet-01878c9ae540a4c51"
              }
            ],
            "subnet_ids": [
              "subnet-01878c9ae540a4c51",
              "subnet-0906b9475428cb098"
            ],
            "tags": {
              "Name": "vpce-secretsmanager"
            },
            "tags_all": {
              "Name": "vpce-secretsmanager"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-064cabda2b5515c75"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "vpce-06c7df5dc168152c5",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security.aws_security_group.vpce_endpoints_sg",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:vpc-endpoint/vpce-0f859920112de5a7a",
            "dns_entry": [
              {
                "dns_name": "vpce-0f859920112de5a7a-6hhjxtgu.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0f859920112de5a7a-6hhjxtgu-ap-northeast-1c.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0f859920112de5a7a-6hhjxtgu-ap-northeast-1a.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssm.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z0383059GDWH5C7NN8UH"
              },
              {
                "dns_name": "ssm.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z038302237KJPY4211T7C"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f859920112de5a7a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0284cb4458d818704",
              "eni-0530047997432f4a1"
            ],
            "owner_id": "261519058382",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0836786897eb89386"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssm",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.72",
                "subnet_id": "subnet-0906b9475428cb098"
              },
              {
                "ipv4": "10.30.12.136",
                "subnet_id": "subnet-01878c9ae540a4c51"
              }
            ],
            "subnet_ids": [
              "subnet-01878c9ae540a4c51",
              "subnet-0906b9475428cb098"
            ],
            "tags": {
              "Name": "vpce-ssm"
            },
            "tags_all": {
              "Name": "vpce-ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-064cabda2b5515c75"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "vpce-0f859920112de5a7a",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security.aws_security_group.vpce_endpoints_sg",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:vpc-endpoint/vpce-025f553a852fa637f",
            "dns_entry": [
              {
                "dns_name": "vpce-025f553a852fa637f-3opglzzk.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-025f553a852fa637f-3opglzzk-ap-northeast-1a.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-025f553a852fa637f-3opglzzk-ap-northeast-1c.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z08706371G9RFC1FOKG07"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z001379030WV5ET0GW048"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-025f553a852fa637f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0ad3cedc6d983605e",
              "eni-0de533111282932ed"
            ],
            "owner_id": "261519058382",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0836786897eb89386"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssmmessages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.30.11.153",
                "subnet_id": "subnet-0906b9475428cb098"
              },
              {
                "ipv4": "10.30.12.12",
                "subnet_id": "subnet-01878c9ae540a4c51"
              }
            ],
            "subnet_ids": [
              "subnet-01878c9ae540a4c51",
              "subnet-0906b9475428cb098"
            ],
            "tags": {
              "Name": "vpce-ssmmessages"
            },
            "tags_all": {
              "Name": "vpce-ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-064cabda2b5515c75"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "vpce-025f553a852fa637f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.security.aws_security_group.vpce_endpoints_sg",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261519058382:vpc-endpoint/vpce-0889499c6127ff1ca",
            "cidr_blocks": [
              "3.5.152.0/21",
              "52.219.162.0/23",
              "52.219.0.0/20",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.172.0/22",
              "52.219.20.0/23",
              "52.219.195.0/24",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.68.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0889499c6127ff1ca",
            "ip_address_type": "ipv4",
            "owner_id": "261519058382",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01935f687f7cddabe"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "service_region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "vpce-s3-gateway"
            },
            "tags_all": {
              "Name": "vpce-s3-gateway"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-064cabda2b5515c75"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "261519058382",
            "id": "vpce-0889499c6127ff1ca",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}